RESOLVED FIXED308854
Clipboard copy serialization does not preserve background-color for multi-paragraph selections
https://bugs.webkit.org/show_bug.cgi?id=308854
Summary Clipboard copy serialization does not preserve background-color for multi-par...
joanne_pan2
Reported 2026-02-27 15:42:18 PST
When copying multiple paragraphs from a page with a non-transparent background-color (e.g. dark mode sites), the serialized clipboard HTML does not include background-color on the <p> elements. For single-paragraph copies, background-color is preserved on the wrapping <span>. This inconsistency causes pasted content to lose its visual appearance. Chrome preserves background-color in both cases.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-27 15:42:23 PST
joanne_pan2
Comment 2 2026-03-02 18:30:24 PST
joanne_pan2
Comment 3 2026-03-03 10:41:13 PST
EWS
Comment 4 2026-03-04 13:08:24 PST
Committed 308655@main (0ab3bf3720f8): <https://commits.webkit.org/308655@main> Reviewed commits have been landed. Closing PR #59812 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.