Clipboard copy serialization does not preserve background-color for multi-paragraph selections https://bugs.webkit.org/show_bug.cgi?id=308854 rdar://171391621

Reviewed by NOBODY (OOPS!).

When copying multi-paragraph content from a dark-mode page, background-color was stripped because removeStyleConflictingWithStyleOfNode computed the parent's and node's styles using different methods. The parent used copyPropertiesFromComputedStyle which got raw background-color: transparent, while the node used EditingStyle::create which walked up the ancestor chain via backgroundColorInEffect and found the actual visible background color. The mismatch caused background-color to be treated as a conflict and thus stripped from the wrapping style. The fix makes both sides use EditingStyle::create, so both walk the ancestor chain and find the same inherited background color. Since they match, background-color is no longer treated as a conflict and is preserved in the wrapping style. It's then moved from the block-level <p> elements (which render full-width backgrounds) onto inline <span> wrappers around the text content.

* LayoutTests/editing/pasteboard/copy-multiparagraph-with-background-color-expected.txt: Added.
* LayoutTests/editing/pasteboard/copy-multiparagraph-with-background-color.html: Added.
* Source/WebCore/editing/EditingStyle.cpp:
(WebCore::EditingStyle::removeStyleConflictingWithStyleOfNode):
(WebCore::EditingStyle::wrappingStyleForSerialization):
* Source/WebCore/editing/markup.cpp:
(WebCore::StyledMarkupAccumulator::appendText):
(WebCore::StyledMarkupAccumulator::appendStartTag):